# simple-text-summarization

./: LICENSE  README.md  pyproject.toml
src/: main.py  news_entry.py  news_parser.py  news_summarizer.py  news_tokenizer.py  raw_news_entry.py  tokenized_news_entry.py  tokenized_sentence.py
